--- a/RockPaperScissorsForm/RockPaperScissorsForm.csproj
+++ b/RockPaperScissorsForm/RockPaperScissorsForm.csproj
@@ -8,4 +8,27 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="pngtree-monochrome-rock-clip-art-png-image_2689540.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="pngtree-monochrome-rock-clip-art-png-image_2689540.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+	
 </Project>
